[gd_scene load_steps=12 format=3 uid="uid://c1t4b5wxk8d02"]

[ext_resource type="Script" path="res://scripts/bosses/fifth_boss.gd" id="1_ui52t"]
[ext_resource type="Texture2D" uid="uid://cffyn5nyj66ta" path="res://graphics/boss_5.body.png" id="2_3esnr"]
[ext_resource type="Texture2D" uid="uid://cllc1x52iqnor" path="res://graphics/boss_5.chasis.png" id="3_kyd4l"]
[ext_resource type="Texture2D" uid="uid://ckwvg67w2r0rt" path="res://graphics/boss_cannon.png" id="4_4p3fc"]
[ext_resource type="Script" path="res://scripts/bosses/boss_random_turret.gd" id="5_frtw7"]
[ext_resource type="PackedScene" uid="uid://drd2m072phc4v" path="res://scenes/hitbox.tscn" id="7_kp1ob"]
[ext_resource type="PackedScene" uid="uid://cwshy400yx3qo" path="res://scenes/hurt_box.tscn" id="8_s3pup"]
[ext_resource type="Texture2D" uid="uid://d3otih1xwa7g2" path="res://graphics/progress_bar.png" id="9_gcmdo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_48w8c"]
radius = 12.0416

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8mox"]
resource_local_to_scene = true
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xonui"]
resource_local_to_scene = true
size = Vector2(24, 24)

[node name="FifthGuardian" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 4
script = ExtResource("1_ui52t")
exp_value = 215
min_fire_interval = 0.5
base_hp = 60
max_hp = 160
hp_per_level = 15
base_speed = 112
max_speed = 288
speed_per_level = 24
base_power = 4
max_power = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_48w8c")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Base" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
texture = ExtResource("2_3esnr")

[node name="Middle" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("3_kyd4l")

[node name="TurretPivot" type="Marker2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="Muzzle1" type="Marker2D" parent="TurretPivot" groups=["Muzzles"]]
position = Vector2(25, 0)

[node name="Turret1" type="Sprite2D" parent="TurretPivot/Muzzle1"]
position = Vector2(-5, 0)
texture = ExtResource("4_4p3fc")
script = ExtResource("5_frtw7")

[node name="Muzzle2" type="Marker2D" parent="TurretPivot" groups=["Muzzles"]]
position = Vector2(21, -10)

[node name="Turret2" type="Sprite2D" parent="TurretPivot/Muzzle2"]
position = Vector2(-5, 0)
texture = ExtResource("4_4p3fc")
script = ExtResource("5_frtw7")

[node name="Muzzle3" type="Marker2D" parent="TurretPivot" groups=["Muzzles"]]
position = Vector2(17, -20)

[node name="Turret3" type="Sprite2D" parent="TurretPivot/Muzzle3"]
position = Vector2(-5, 0)
texture = ExtResource("4_4p3fc")
script = ExtResource("5_frtw7")

[node name="Muzzle1" type="Marker2D" parent="TurretPivot/Muzzle3" groups=["Muzzles"]]
position = Vector2(4, 30)

[node name="Turret4" type="Sprite2D" parent="TurretPivot/Muzzle3/Muzzle1"]
position = Vector2(-5, 0)
texture = ExtResource("4_4p3fc")
script = ExtResource("5_frtw7")

[node name="Muzzle4" type="Marker2D" parent="TurretPivot" groups=["Muzzles"]]
position = Vector2(17, 20)

[node name="Turret5" type="Sprite2D" parent="TurretPivot/Muzzle4"]
position = Vector2(-5, 0)
texture = ExtResource("4_4p3fc")
script = ExtResource("5_frtw7")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." node_paths=PackedStringArray("target") instance=ExtResource("7_kp1ob")]
visible = false
collision_layer = 32
collision_mask = 512
target = NodePath("..")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_d8mox")

[node name="HurtBox" parent="." instance=ExtResource("8_s3pup")]
collision_layer = 256
collision_mask = 0
monitoring = false
damage = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
shape = SubResource("RectangleShape2D_xonui")

[node name="HealthBarPivot" type="Marker2D" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="HealthBarPivot"]
visible = false
custom_minimum_size = Vector2(16, 4)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0
nine_patch_stretch = true
texture_progress = ExtResource("9_gcmdo")
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]

[editable path="Hitbox"]
[editable path="HurtBox"]
